--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ old/
 User/desktop.ini
 
 User/MarkdownPreview.sublime-settings
+
+User/SublimeGit.sublime-settings
+User/SublimeGit.sublime-settings
